--- a/src/app/pages/academics/academic-year/archive-academic-year/archive-academic-year.component.html
+++ b/src/app/pages/academics/academic-year/archive-academic-year/archive-academic-year.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header bg-dark">
-  <h4 class="modal-title pull-left">Archive Academic Year</h4>
+  <h4 class="modal-title pull-left">{{ title }}</h4>
   <button type="button" class="close pull-right" [attr.aria-label]="'Archive Academic Year'" (click)="closeModal()">
     <span aria-hidden="true">&times;</span>
 
@@ -7,7 +7,7 @@
 </div>
 <div class="modal-body bg-dark">
 <!--  <p class="text-danger">You are about to archive academic year <span class="text-primary">"{{ id }}"</span></p>-->
-  <p class="text-danger">You are about to archive academic year</p>
+  <p class="text-danger">You are about to {{ title | lowercase }}</p>
 
   <p>Please Enter #{{ id }} to confirm action</p>
   <input placeholder="eg #xyz" aria-label="Course Name" type="text" class="form-control" [(ngModel)]='confirmation'>
@@ -16,7 +16,7 @@
   <button (click)='closeModal()' class="btn btn-secondary" type="button">Cancel</button>
   <button (click)='saveArchive()' [disabled]='(confirmation !=  "#" + id) || (submitInProgressAction$ | ngrxPush)'
           class="btn btn-danger">
-    <span *ngIf='(submitInProgressAction$ | ngrxPush) === false'>Archive</span>
+    <span *ngIf='(submitInProgressAction$ | ngrxPush) === false'>{{ title }}</span>
     <span *ngIf='submitInProgressAction$ | ngrxPush'>Saving...</span>
     <i *ngIf='(submitInProgressAction$ | ngrxPush) === false' class='icon-trash'></i>
     <i *ngIf='submitInProgressAction$ | ngrxPush' class='icon-spin3 animate-spin'></i>
