improved look of admin elearning page

--- a/src/app/pages/academics/e-learning/e-learning-admin/e-learning-admin.component.css
+++ b/src/app/pages/academics/e-learning/e-learning-admin/e-learning-admin.component.css
@@ -1,10 +1,1 @@
-.list-group-item {
-  background: none;
-}
-.list-group-item:hover {
-  outline: rgba(172, 255, 47, 0.438) solid 1px;
-}
-.list-group-item a:hover {
-  color: greenyellow !important ;
-  text-decoration: none;
-}
+@import "../e-learning-courses/e-learning-courses.component.css";
