--- a/src/app/pages/academics/e-learning/e-learning-admin/e-learning-admin.component.html
+++ b/src/app/pages/academics/e-learning/e-learning-admin/e-learning-admin.component.html
@@ -1,7 +1,7 @@
 <h1>E Learning Admin</h1>
 <ng-container *ngIf='filteredCourses$ | ngrxPush as filteredCourses; else contentLoading'>
 <div class="card p-2">
-  <section class="d-flex justify-content-between align-items-end flex-wrap">
+  <section class="d-flex justify-content-between align-items-start flex-wrap">
 
     <section class="col-lg-4 col-md-6 col-sm-6">
       <label for="search">Search Courses</label>
@@ -12,27 +12,37 @@
     </button>
   </section>
   <section class="mt-2">
-    <ul class="d-flex justify-content-start flex-wrap p-3">
-      <li *ngFor='let course of filteredCourses' class="list-group-item bg-none list-group-flush p-0 col-lg-6 mt-2">
-        <div class="d-flex flex-wrap justify-content-between align-items-center">
 
-          <section class="col-lg-9 col-sm-7">
-            <app-e-learning-course [course]='course'></app-e-learning-course>
-          </section>
-
-          <section class="col-lg-3 col-sm-5 d-flex justify-content-around">
-            <a [routerLink]='["courses", course.id, "edit-contents"]' aria-label="Edit" class="btn btn-primary btn-sm">
-              <span class="icon-edit"></span>
-            </a>
-          </section>
-        </div>
-      </li>
-    </ul>
-
-    <div *ngIf="filteredCourses.length === 0" class="alert alert-info">
+    <div *ngIf="filteredCourses.length === 0" class="m-2 alert alert-info">
       <span class="icon-info"></span>No courses found!
     </div>
   </section>
+  <ng-container *ngFor='let academicYearCourse of groupedCourses(filteredCourses, "academicYearName"); let i = index'>
+    <div class="col-lg-12 mb-1">
+      <section class="card p-2">
+        <h2 [class.active]='isCollapsed[i]' [attr.aria-expanded]="!isCollapsed[i]"
+            (click)="toggleCollapse(i)" class="mt-1">
+          <span [class.icon-folder-open]='isCollapsed[i]' [class.icon-folder]='!isCollapsed[i]'></span>Academic Year: {{ academicYearCourse[0] }}
+
+        </h2>
+        <div class="d-flex" *ngIf='isCollapsed[i]'>
+          <div class="col-lg-12">
+            <section class="card p-2 mt-2">
+              <ng-container *ngFor='let classLevelCourse of groupedCourses(academicYearCourse[1], "classLevelName")'>
+                <h3>Class Level: {{ classLevelCourse[0] !== 'null' ? classLevelCourse[0] : 'Not Specified'}}</h3>
+                <ul class="d-flex justify-content-around flex-wrap p-3">
+                  <li *ngFor='let course of classLevelCourse[1]' class="list-group-item bg-none list-group-flush p-0 col-lg-5 mt-2">
+                    <app-e-learning-course [edit]="true" [course]='course'></app-e-learning-course>
+                  </li>
+                </ul>
+              </ng-container>
+            </section>
+          </div>
+        </div>
+      </section>
+    </div>
+
+  </ng-container>
 </div>
 </ng-container>
 <ng-template #contentLoading>
