--- a/src/app/pages/academics/e-learning/e-learning-course/e-learning-course.component.html
+++ b/src/app/pages/academics/e-learning/e-learning-course/e-learning-course.component.html
@@ -1,17 +1,22 @@
-<a class="card-link  btn-block p-2 bg-dark"
-  [routerLink]='["/academics","e-learning","courses", course.id]'>
+<div class="d-flex justify-content-between align-items-center">
+  <a class="card-link  btn-block p-2 bg-dark"
+     [routerLink]='["/academics","e-learning","courses", course.id]'>
 
-  <span class="icon-folder-open"></span>
-  <strong>{{ course.name }}</strong><br />
-  <div class="d-flex justify-content-between">
-    <small> Class Level : {{ course.classLevelAbbreviation }}</small>
-    <small> Subject/Unit : {{ course.unitAbbreviation }}</small>
-    <small> Year : {{ course.academicYearName }}</small>
-  </div>
-  <!-- <br>
-            <small class="ml-2"> Created by : Owen Kelvin </small>
-            <br>
-            <small class="ml-2"> Taught by : Owen Kelvin, Peter Junior </small> -->
-  <!-- TODO-me make above functionality -->
+    <span class="icon-folder-open"></span>
+    <strong>{{ course.name }}</strong><br />
+    <div class="d-flex justify-content-between">
+      <small> Class Level : {{ course.classLevelAbbreviation }}</small>
+      <small> Subject/Unit : {{ course.unitAbbreviation }}</small>
+      <small> Year : {{ course.academicYearName }}</small>
+    </div>
+    <!-- <br>
+              <small class="ml-2"> Created by : Owen Kelvin </small>
+              <br>
+              <small class="ml-2"> Taught by : Owen Kelvin, Peter Junior </small> -->
+    <!-- TODO-me make above functionality -->
 
-</a>
+  </a>
+  <a *ngIf="edit" [routerLink]='["courses", course.id, "edit-contents"]' aria-label="Edit" class="btn btn-primary btn-sm">
+    <span class="icon-edit"></span>
+  </a>
+</div>
