--- a/src/app/pages/academics/e-learning/e-learning-courses/e-learning-courses.component.html
+++ b/src/app/pages/academics/e-learning/e-learning-courses/e-learning-courses.component.html
@@ -1,4 +1,5 @@
-<h1>E Learning Courses</h1>
+<h1>
+  E Learning Courses</h1>
 <ng-container *ngIf="filteredCourses$ | ngrxPush as filteredCourses; else contentLoading">
   <section class="d-flex justify-content-around align-items-center">
 
