--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -23,7 +23,7 @@
   <section class='col-sm-7 col-md-8 col-lg-9 d-flex align-items-lg-between flex-wrap'>
     <section class='col-lg-12 d-flex flex-wrap justify-content-between align-items-lg-center'>
       <section class='col-sm-12 d-flex justify-content-between'>
-        <h2>{{ fullName | uppercase }}</h2>
+        <h2>{{ fullName | uppercase }}<span *ngIf="profile.studentId"> ({{ profile.studentId }}) </span></h2>
       </section>
       <section class='col-lg-6'>
         <app-name-item key="firstName" (valueChanged)='changeProfile($event)' [userId]='profile.id' label='First Name' [name]='profile.firstName'></app-name-item>
