--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,16 +1,13 @@
 <section class='form-group mb-4' style="position: relative;">
   <section class='d-flex flex-wrap m-0 mt-2 p-0 align-items-center'>
-  	<label [class]='"col-md-12 col-lg-12 col-sm-12 control-label " + labelClass + " m-0 p-0"' [attr.for]='id'>
-			<span class='icon-star required' [class.required-inVisible]='!isRequired'></span>{{ label }}
-		</label>
-	  <section [class]='inputClass ? inputClass + " input-group" + " m-0 p-0": "col-md-12 col-lg-12 " + inputClass + " input-group" + " m-0 p-0"'>
-	  	<section *ngIf='prependIcon' class='input-group-prepend' [class.is-invalid]='fieldError'>
-	      <span class='input-group-text' [id]='"inputGroupPrepend" + id'><i [class]='prependIcon'></i></span>
-	    </section>
-      <div class="input-group-prepend">
-        <ng-content select="[data-prependIcon]">
-        </ng-content>
-      </div>
+    <label [class]='"col-md-12 col-lg-12 col-sm-12 control-label " + labelClass + " m-0 p-0"' [attr.for]='id'>
+      <span class='icon-star required' [class.required-inVisible]='!isRequired'></span>{{ label }}
+    </label>
+    <section
+      [class]='inputClass ? inputClass + " input-group" + " m-0 p-0": "col-md-12 col-lg-12 " + inputClass + " input-group" + " m-0 p-0"'>
+      <section class='input-group-prepend' [class.is-invalid]='fieldError'>
+        <span class='input-group-text' [id]='"inputGroupPrepend" + id'><ng-content select="[data-prependIcon]"></ng-content></span>
+      </section>
       <ng-container [ngSwitch]="type">
         <ng-container *ngSwitchCase="'dob'">
           <input
@@ -68,21 +65,21 @@
       </ng-container>
 
 
-
-				<section class='input-group-append' *ngIf='type === "password"'>
-					<button
-						appShowPassword
-						(toggleType)='fieldType = $event' type="button" class='show-password'>
-						<i [class.icon-eye]='fieldType === "password"'></i>
-						<i [class.icon-eye-off]='fieldType !== "password"'></i>
-					</button>
-				</section>
-				<section *ngIf='fieldError' class="invalid-feedback-message" style="position: absolute;">
-					<div class="arrow-up"></div>
-					{{ fieldError }}
-				</section>
-		</section>
-	</section>
-	<app-password-meter *ngIf='showPasswordStrength' [passwordString]='passwordStringChangeAction$ | ngrxPush'></app-password-meter>
+      <section class='input-group-append' *ngIf='type === "password"'>
+        <button
+          appShowPassword
+          (toggleType)='fieldType = $event' type="button" class='show-password'>
+          <i [class.icon-eye]='fieldType === "password"'></i>
+          <i [class.icon-eye-off]='fieldType !== "password"'></i>
+        </button>
+      </section>
+      <section *ngIf='fieldError' class="invalid-feedback-message" style="position: absolute;">
+        <div class="arrow-up"></div>
+        {{ fieldError }}
+      </section>
+    </section>
+  </section>
+  <app-password-meter *ngIf='showPasswordStrength'
+                      [passwordString]='passwordStringChangeAction$ | ngrxPush'></app-password-meter>
 </section>
 
