--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,14 +5,15 @@
         <h1>Login</h1>
       </section>
       <form [formGroup]='loginForm' (ngSubmit)='submitLoginForm()' class='card-body form-horizontal'>
-        <app-input [triggerValidation]='triggerValidationAction$ | ngrxPush' label='Username' placeholder='Enter username/email/admission number'
+        <app-input [triggerValidation]='triggerValidationAction$ | ngrxPush' label='Username'
+                   placeholder='Enter username/email/admission number'
                    id='username' formControlName='username' prependIcon='icon-user'
                    autocomplete='username'>
-          <div data-prependIcon>
-            Genius
-          </div>
+          <fa-icon data-prependIcon [icon]="faUser"></fa-icon>
+
         </app-input>
-        <app-input [triggerValidation]='triggerValidationAction$ | ngrxPush' label='Password' placeholder='Enter Password' id='password'
+        <app-input [triggerValidation]='triggerValidationAction$ | ngrxPush' label='Password'
+                   placeholder='Enter Password' id='password'
                    formControlName='password' prependIcon='icon-lock-filled' autocomplete='current-password'
                    type='password'>
         </app-input>
