--- a/src/app/pages/time-table/academic-years/time-table-academic-year-edit/time-table-academic-year-edit.component.html
+++ b/src/app/pages/time-table/academic-years/time-table-academic-year-edit/time-table-academic-year-edit.component.html
@@ -79,7 +79,7 @@
   <ng-template #template>
     <div class="modal-header bg-dark">
       <h4 class="modal-title pull-left">Time Table Content Editing Form</h4>
-      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef?.hide()">
         <span aria-hidden="true">&times;</span>
 
       </button>
@@ -115,7 +115,7 @@
 
     </div>
     <div class="modal-footer bg-dark">
-      <button type="button" (click)='modalRef.hide()' class="btn btn-secondary">Cancel</button>
+      <button type="button" (click)='modalRef?.hide()' class="btn btn-secondary">Cancel</button>
       <button type="button" [disabled]="editLessonForm.invalid || !editLessonForm.touched" (click)='saveLesson()' class="btn btn-success">
         <span>Save Content</span>
         <i class='icon-ok-1'></i>
