--- a/src/app/pages/time-table/time-table-admin/create-timing-template/create-timing-template.component.html
+++ b/src/app/pages/time-table/time-table-admin/create-timing-template/create-timing-template.component.html
@@ -15,13 +15,13 @@
           inputClass='col-md-12 col-lg-9' label='Description' id='name' type="text" placeholder="Name"
           formControlName="description"></app-input>
       </div>
-     
+
       <div class="col-lg-12 card pt-2" formArrayName='timings'>
         <div class="d-flex">
           <button class="btn btn-primary btn-sm" (click)='addTiming()'> <span class='icon-plus-circled'></span> Add </button>
         </div>
         <div class="d-flex flex-wrap mt-2"
-          *ngFor='let timing of timeTableTimingForm.get("timings")?.controls; let i = index' [formGroupName]='i'>
+          *ngFor='let timing of timings.controls; let i = index' [formGroupName]='i'>
           <div class="col-lg-5">
             <app-input [triggerValidation]='(triggerValidationAction$ | ngrxPush)' labelClass='col-md-12 col-lg-5'
               inputClass='col-md-12 col-lg-7' label='From' [id]='"from" + i' type="time" placeholder="From"
@@ -33,7 +33,7 @@
               formControlName="end"></app-input>
           </div>
           <div class="col-lg-2">
-            <button [disabled]='timeTableTimingForm.get("timings")?.controls?.length < 2' (click)='deleteTiming(i)' class="btn btn-danger btn-sm"><span class="icon icon-trash"></span></button>
+            <button [disabled]='timings.controls.length < 2' (click)='deleteTiming(i)' class="btn btn-danger btn-sm"><span class="icon icon-trash"></span></button>
           </div>
 
         </div>
@@ -45,7 +45,7 @@
       (validationButtonClicked)='triggerValidationSubject$.next(true)' [formItem]='timeTableTimingForm'>
       <span>Save Timings</span>
     </app-validate-submit-buttons>
-    
+
     <button type="button" (click)='closeModal()' class="btn btn-secondary">Cancel</button>
 
   </div>
