--- a/src/app/pages/academics/academic-year/undelete-academic-year/undelete-academic-year.component.html
+++ b/src/app/pages/academics/academic-year/undelete-academic-year/undelete-academic-year.component.html
@@ -13,8 +13,7 @@
 </div>
 <div class="modal-footer bg-dark">
   <button (click)='closeModal()' class="btn btn-secondary" type="button">Cancel</button>
-  <button (click)='saveDelete()' [disabled]='(confirmation
-  =  "#" + id) || (submitInProgressAction$ | ngrxPush)'
+  <button (click)='saveDelete()' [disabled]='(confirmation !==  "#" + id) || (submitInProgressAction$ | ngrxPush)'
           class="btn btn-danger">
     <span *ngIf='(submitInProgressAction$ | ngrxPush) === false'>Restore Academic Year</span>
     <span *ngIf='submitInProgressAction$ | ngrxPush'>Saving...</span>
