Changed several icons in creating procurement

--- a/src/app/pages/academics/e-learning/e-learning-admin/e-learning-edit-course/edit-course-content-item/edit-course-content-item.component.html
+++ b/src/app/pages/academics/e-learning/e-learning-admin/e-learning-edit-course/edit-course-content-item/edit-course-content-item.component.html
@@ -19,7 +19,7 @@
       <tr>
         <td>{{ learningContent.study_material?.study_material_doc?.name }}</td>
         <td>
-          <span [class]="(learningContent.study_material?.study_material_doc?.type | fileExtention) "></span>
+          <span [class]="(learningContent.study_material?.study_material_doc?.type | fileExtension) "></span>
           {{ learningContent.study_material?.study_material_doc?.type }}
         </td>
         <td>{{ learningContent.study_material?.study_material_doc?.size | filesize }}</td>
