--- a/src/app/pages/academics/e-learning/e-learning-admin/e-learning-edit-course/e-learning-edit-course.component.html
+++ b/src/app/pages/academics/e-learning/e-learning-admin/e-learning-edit-course/e-learning-edit-course.component.html
@@ -4,7 +4,7 @@
     <ng-container>
       <div class="d-flex justify-content-start">
         <button type="button" [routerLink]="['/academics', 'e-learning', 'admin', 'courses', v.courseId, 'edit']"
-                class="btn btn-primary"><span class="icon-edit"></span>Edit Course Details
+                class="btn btn-primary"><fa-icon [icon]="faEdit"></fa-icon>Edit Course Details
         </button>
       </div>
       <fieldset class="card p-2 mt-2 mb-2">
@@ -30,7 +30,7 @@
         <legend>Contents</legend>
         <section class="d-flex flex-wrap justify-content-center">
           <div class="col-12 alert alert-info" *ngIf="!v.course?.topics || v.course?.topics?.length < 1">
-            <span class="icon-info-circled"></span> No course contents were found!
+            <fa-icon [icon]="faInfoCircle"></fa-icon> No course contents were found!
           </div>
           <fieldset class="col-lg-12 mt-2 mb-3 p-2 card" *ngFor='let topic of v.course?.topics; let i = index'>
             <legend class="mt-2">{{ v.course?.topicNumberStyleName }} {{ i + 1 }}. {{ topic.description }}</legend>
@@ -79,7 +79,7 @@
                       <button (click)='openModalNewContent(templateNewContent, subTopic.id)'
                               class="btn btn-primary btn-sm"
                               type="button">
-                        <span class="icon-plus-circled"></span>
+                        <fa-icon [icon]="faPlusCircled"></fa-icon>
                         New Content
                       </button>
                     </div>
@@ -114,8 +114,8 @@
                 class="btn btn-danger">
           <span *ngIf='!deletingCourse'>Delete this course</span>
           <span *ngIf='deletingCourse'>Deleting...</span>
-          <i *ngIf='!deletingCourse' class='icon-trash'></i>
-          <i *ngIf='deletingCourse' class='icon-spin3 animate-spin'></i>
+          <fa-icon *ngIf='!deletingCourse' [icon]='faTrash'></fa-icon>
+          <fa-icon *ngIf='deletingCourse' [icon]="faSpinner" class='animate-spin'></fa-icon>
         </button>
       </div>
     </ng-template>
@@ -202,22 +202,22 @@
                 [disabled]='activeForm().invalid || (submitInProgressAction$ | ngrxPush)' class="btn btn-success">
           <span *ngIf='(submitInProgressAction$ | ngrxPush) === false'>Save Content</span>
           <span *ngIf='(submitInProgressAction$ | ngrxPush)'>Saving...</span>
-          <i *ngIf='(submitInProgressAction$ | ngrxPush) === false' class='icon-ok-1'></i>
-          <i *ngIf='(submitInProgressAction$ | ngrxPush)' class='icon-spin3 animate-spin'></i>
+          <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush) === false' [icon]="faCheck"></fa-icon>
+          <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush)' [icon]="faSpinner" class='animate-spin'></fa-icon>
         </button>
         <button *ngIf='activeFormName === "newLearningOutcomeForm"' form='newLearningOutcomeForm'
                 [disabled]='activeForm().invalid || (submitInProgressAction$ | ngrxPush)' class="btn btn-success">
           <span *ngIf='(submitInProgressAction$ | ngrxPush) === false'>Save Learning Content</span>
           <span *ngIf='(submitInProgressAction$ | ngrxPush)'>Saving...</span>
-          <i *ngIf='(submitInProgressAction$ | ngrxPush) === false' class='icon-ok-1'></i>
-          <i *ngIf='(submitInProgressAction$ | ngrxPush)' class='icon-spin3 animate-spin'></i>
+          <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush) === false' [icon]='faCheck'></fa-icon>
+          <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush)' [icon]="faSpinner" class='animate-spin'></fa-icon>
         </button>
         <button *ngIf='activeFormName === "onlineAssessmentForm"' [attr.form]='"onlineAssessmentForm"'
                 [disabled]='(formInvalid$ | ngrxPush) || (submitInProgressAction$ | ngrxPush)' class="btn btn-success">
           <span *ngIf='(submitInProgressAction$ | ngrxPush) === false'>Create Assessment</span>
           <span *ngIf='(submitInProgressAction$ | ngrxPush)'>Creating...</span>
-          <i *ngIf='(submitInProgressAction$ | ngrxPush) === false' class='icon-ok-1'></i>
-          <i *ngIf='(submitInProgressAction$ | ngrxPush)' class='icon-spin3 animate-spin'></i>
+          <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush) === false' [icon]='faCheck'></fa-icon>
+          <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush)' [icon]="faSpinner" class='animate-spin'></fa-icon>
         </button>
       </div>
     </ng-template>
