Added several icons

--- a/src/app/pages/academics/curriculum/create-class-level-category/create-class-level-category.component.html
+++ b/src/app/pages/academics/curriculum/create-class-level-category/create-class-level-category.component.html
@@ -33,7 +33,7 @@
     <button [disabled]='!classLevelCategoryForm.valid || (submitInProgressAction$ | ngrxPush)' class='btn btn-success' type='submit'>
       {{ (editFormAction$ | ngrxPush) ? 'Update': 'Create'}}
       <fa-icon *ngIf='classLevelCategoryForm.valid && (submitInProgressAction$ | ngrxPush) === false' [icon]='faSave'></fa-icon>
-      <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush)' [icon]="faSave" [spin]="true"></fa-icon>
+      <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush)' [icon]="faSpinner" [spin]="true"></fa-icon>
     </button>
   </section>
 
