--- a/src/app/pages/login/password-change-form/password-change-form.component.html
+++ b/src/app/pages/login/password-change-form/password-change-form.component.html
@@ -1,18 +1,21 @@
 <form (submit)='submitPasswordChangeForm()' [formGroup]='passwordChangeForm' class='form-horizontal'>
   <ng-container *ngIf='showOldPasswordField$ | ngrxPush'>
     <app-input type='password' labelClass='col-lg-12 col-md-12' inputClass='col-lg-12' label='Old Password'
-               placeholder='Enter Old Password' id='oldPassword' formControlName='oldPassword' prependIcon='icon-lock'
-               [autofocus]='true'></app-input>
+               placeholder='Enter Old Password' id='oldPassword' formControlName='oldPassword'
+               [autofocus]='true'>
+      <fa-icon data-prependIcon [icon]="faKey"></fa-icon>
+    </app-input>
   </ng-container>
   <app-input type='password' labelClass='col-lg-12 col-md-12' inputClass='col-lg-12' label='New Password'
-             placeholder='Enter New Password' id='newPassword' formControlName='newPassword' prependIcon='icon-lock'
+             placeholder='Enter New Password' id='newPassword' formControlName='newPassword'
              [showPasswordStrength]='true'>
+    <fa-icon data-prependIcon [icon]="faKey"></fa-icon>
   </app-input>
 
   <app-input type='password' labelClass='col-lg-12 col-md-12' inputClass='col-lg-12' label='New Password Confirmation'
              placeholder='Enter New Password Confirmation' id='newPasswordConfirmation'
-             formControlName='newPasswordConfirmation'
-             prependIcon='icon-lock'>
+             formControlName='newPasswordConfirmation'>
+    <fa-icon data-prependIcon [icon]="faKey"></fa-icon>
   </app-input>
 
   <section style="position: relative">
