--- a/src/app/pages/students/edit-student-academics/edit-student-academics.component.html
+++ b/src/app/pages/students/edit-student-academics/edit-student-academics.component.html
@@ -49,7 +49,7 @@
                   type='submit'>
             Save Changes
             <fa-icon *ngIf='unitLevelForm.valid && (submitInProgressAction$ | ngrxPush) === false' [icon]='faSave'></fa-icon>
-            <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush)' [icon]='faSpinner' [spin]="faSpinner"></fa-icon>
+            <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush)' [icon]='faSpinner' [spin]="true"></fa-icon>
           </button>
         </section>
       </div>
