--- a/src/app/shared/network-loading/components/network-loading/network-loading.component.html
+++ b/src/app/shared/network-loading/components/network-loading/network-loading.component.html
@@ -1,5 +1,5 @@
 <section *ngIf='isLoading$ | ngrxPush' class="d-flex justify-content-center">
   <section class="alert alert-info pt-1 pb-1 mt-1">
-    <i class='icon-spin3 animate-spin'></i> Loading...
+    <fa-icon [icon]='faSpinner' [spin]="true"></fa-icon> Loading...
   </section>
 </section>
