--- a/src/app/components/header/logout-button/logout-button.component.html
+++ b/src/app/components/header/logout-button/logout-button.component.html
@@ -1,1 +1,1 @@
-<a class='dropdown-item' (click)='logout()'><span class='icon-logout-2'></span>Log Out</a>
+<a class='dropdown-item' (click)='logout()'><fa-icon [icon]='faSignOutAlt'></fa-icon> Log Out</a>
