--- a/src/app/components/label-star-required/label-star-required.component.html
+++ b/src/app/components/label-star-required/label-star-required.component.html
@@ -1,5 +1,3 @@
 <section class='d-flex justify-content-end'>
-  Fields Marked with
-  <fa-icon [icon]="faStar"></fa-icon>
-  are required
+  Fields Marked with <fa-icon class="active" [icon]="faStar"></fa-icon> are required
 </section>
