--- a/src/app/components/user-profile/name-item/name-item.component.html
+++ b/src/app/components/user-profile/name-item/name-item.component.html
@@ -9,8 +9,7 @@
         </button>
         <button [disabled]='itemForm.invalid || !itemForm.dirty' class="btn btn-success mt-2">
           <fa-icon *ngIf='itemForm.valid && (submitInProgressAction$ | ngrxPush) === false' [icon]="faSave"></fa-icon>
-          <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush)' [icon]="faSpinner" [spin]="true"></fa-icon>
-          <fa-icon [icon]="faSave"></fa-icon> Save
+          <fa-icon *ngIf='(submitInProgressAction$ | ngrxPush)' [icon]="faSpinner" [spin]="true"></fa-icon> Save
         </button>
       </div>
     </div>
@@ -20,7 +19,7 @@
       &nbsp; {{ name }}
       <button type="button" (click)='editable = true' (mouseout)='editHovered = false' (mouseover)='editHovered = true'
               *ngIf='editMode$ | ngrxPush' [attr.aria-label]='"Edit " + label +" Name"' class="icon">
-        <span [class.icon-pencil-1]='!editHovered' [class.icon-edit]="editHovered"></span>
+        <fa-icon [icon]="editHovered ? faEdit : faPencilAlt"></fa-icon>
       </button>
 
     </div>
