--- a/src/styles.css
+++ b/src/styles.css
@@ -86,10 +86,10 @@
   margin-right: 5px;
   display: none;
 }
-.ng-select span.ng-arrow-wrapper:before {
-  content: "\e82c" !important;
-  font-family: "fontello", sans-serif;
-}
+/*.ng-select span.ng-arrow-wrapper:before {*/
+/*  content: "\e82c" !important;*/
+/*  font-family: "fontello", sans-serif;*/
+/*}*/
 .ng-select.ng-select-opened>.ng-select-container .ng-arrow-wrapper {
   margin-right: 5px;
 }
@@ -97,11 +97,11 @@
   font-weight: bolder !important;
   margin-left: 5px;
 }
-.ng-option.ng-option-selected:before {
-  content: "\e86d  " !important;
-  white-space: pre;
-  font-family: "fontello", sans-serif;
-}
+/*.ng-option.ng-option-selected:before {*/
+/*  content: "\e86d  " !important;*/
+/*  white-space: pre;*/
+/*  font-family: "fontello", sans-serif;*/
+/*}*/
 
 html, body {
   background: rgb(49, 49, 49);
